--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,18 +6,16 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-image: url(./img/composicion-moderna-mecanico-automoviles.jpg);
+    background-image: url(../img/composicion-moderna-mecanico-automoviles.jpg);
     background-size: cover;
     background-position: center;
     color: white;
     text-align: center;
-
 }
 
 h1 {
     color: rgb(171, 194, 255);
     font-size: 50px;
-
 }
 
 button {
@@ -56,30 +54,7 @@ p {
 }
 
 footer {
-    background-color:footer {
     background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-}
-
-.footer-content {
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.footer-content h2 {
-    margin: 0;
-    font-size: 18px;
-}
-
-.footer-content p {
-    margin: 5px 0;
-    font-size: 14px;
-}
     color: white;
     text-align: center;
     padding: 20px 0;
